--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Thumbnail image/gif -->
     <meta
       property="og:image"
-      content="https://raw.githubusercontent.com/JianWei-0510/naruto-tiktok/main/media/naruto.jpeg" />
+      content="https://raw.githubusercontent.com/JianWei-0510/naruto-tiktok/main/media/naruto.jpg" />
     <meta property="og:type" content="video.other" />
 
     <!-- Video Link -->
